--- a/.classpath
+++ b/.classpath
@@ -36,7 +36,7 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/spring/ojdbc10.jar">
+	<classpathentry kind="lib" path="C:/Users/y/Desktop/ojdbc10.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
